--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,6 +27,10 @@ jobs:
     - name: check docker version
       run: |
         docker --version
+
+    - name: check Jenkins version
+      run: |
+        jenkins --version
         
 
        
