--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: check Jenkins version
       run: |
+        sudo apt install jenkins -y
         jenkins --version
         
 
