--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,14 +27,13 @@ jobs:
     - name: check docker version
       run: |
         docker --version
+        docker pull nginx
+        docker run -d -p 8080:80 nginx
+        curl localhost 80
 
-    - name: check Jenkins version
-      run: |
-        wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
-        sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
-        sudo apt update
-        sudo apt install jenkins -y
-        jenkins --version
+
+    
+        
         
 
        
